2005-01-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.4
	* NEWS : Updated
	* addressbook/e-book-backend-exchange.c : fixed some warnings
	* Updated the po files

2005-01-24  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added CAMEL_URL_ALLOW_AUTH to
	provider structure.

2005-01-24  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-folder.c (transfer_messages_to):
	We should now call journal_transfer instead of journal_append
	* camel/camel-exchange-journal.c : Handle transfer of messages
	and also updating the flags.

2005-01-24  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c: Added offline support
	for personal addressbook. 

2005-01-23  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Changed owa_url variable type.

	* lib/e2k-autoconfig.c: similar.

	* lib/e2k-validate.h: similar.

2005-01-22  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_new): Added owa_url
	parameter to ExchangeAccount structure and reading it's value.
	(finalize): free for owa_url

	* lib/urltest.c: Added new. Test program which takes url as input
	and prints E2kUri structure parameters.

	* lib/Makefile.am: Handling urltest.c

2005-01-20  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* calendar/e-cal-backend-exchange-calendar.c : Add a check to not fetch
	data from server in offline mode.
	* calendar/e-cal-backend-exchange.c : Modify the error message string.
	* storage/e-folder-exchange.c : This is a hack right now. A better fix
	needs to be done down the line.
	* storage/exchange-offline-listener.c : Minor argument checks.

2005-01-19  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added one more parameter to
	user validation function, for reading remember password flag value.

	* lib/e2k-validate.h: Similar.

	* lib/e2k-autoconfig.c (e2k_validate_user): Forming the password hash